fix height shifts on restaurants

--- a/src/pages/Restaurant/Sidetab.css
+++ b/src/pages/Restaurant/Sidetab.css
@@ -3,7 +3,7 @@
 }
 
 .ant-layout-sider ::-webkit-scrollbar-track {
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(249, 0, 0, 0.1);
 }
 
 .ant-layout-sider ::-webkit-scrollbar-thumb {
